<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Counters</string>
    <string name="hello_world">Hola mundo!</string>
    <string name="action_about">Acerca de </string>

    <string name="fragment_counter">Solo contador</string>
    <string name="fragment_counter_time">Crono contador</string>
    <string name="FragmentCounter">Contador</string>

    <string name="counter_stop">Contador guardado a las</string>
    <string name="counter_start">Contador iniciado a las</string>
    <string name="counter_cancel">Contador cancelado.</string>

    <string name="action_start">Inicio</string>
    <string name="action_stop">Parar</string>
    <string name="action_end">Fin</string>
    <string name="action_abort">Cancelar</string>

    <string name="counter_finished">Contador finalizado!</string>
    <string name="counter_aborted">Counter cancelado!</string>
    <string name="time">Tiempo</string>

    <string name="start_time_please">El crono no se ha iniciado</string>
    <string name="stop_time">El conteo ha sido cancelado</string>
    <string name="save_counter">GUARDAR</string>

    <string name="counter_tab">General</string>
    <string name="counter_time_tab">Tiempo</string>
    <string name="data_tab">Datos</string>
    <string name="minus_counter">MENOS</string>
    <string name="plus_counter">PLUS</string>
    <string name="textView">textView</string>
    <string name="duration_counter">Duración</string>
    <string name="fragment_counter_set">Counter set</string>
    <string name="fragment_counter_data">Counters data</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Counters detail</string>
    <string name="action_share">Share</string>
    <string name="preference_minutes_label">Minutes</string>
    <string name="preference_minutes_default" translatable="false">5</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="tv_label">insert top number</string>
    <string name="dialog_text">Counter set</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>

    <string name="format_latitude">Latitude : <xliff:g id="latitude">%1$.6f</xliff:g>º</string>
    <string name="format_longitude">Longitude : <xliff:g id="longitude">%1$.6f</xliff:g>º</string>
    <string name="to"> to </string>
    <string name="title_activity_settings">Settings</string>

    <string name="preference_sound_label">Sounds</string>
    <string name="preference_sound_label_activated">Activated</string>
    <string name="preference_sound_label_deactivated">Deactivate</string>
    <string name="preference_sound_activated" translatable="false">sound_activated</string>
    <string name="preference_sound_deactivated" translatable="false">sound_deactivated</string>

    <string name="preference_minutes_key" translatable="false">minutes_key</string>
    <string name="preference_sound_key" translatable="false">sound_key</string>

    <string name="preference_enable_sound_true">Enabled</string>
    <string name="preference_enable_sound_false">Not Enabled</string>
    <string name="preference_enable_sound_default" translatable="false">true</string>
    <string name="menu_settings">Settings</string>


</resources>
