<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/preference_minutes_label"
        android:key="@string/preference_minutes_key"
        android:defaultValue="@string/preference_minutes_default"
        android:inputType="text"
        android:singleLine="true" />

    <!--<ListPreference-->
        <!--android:title="@string/pref_sound_label"-->
        <!--android:key="@string/pref_sound_key"-->
        <!--android:defaultValue="@string/pref_sound_activated"-->
        <!--android:entryValues="@array/pref_sound_values"-->
        <!--android:entries="@array/pref_sound_options" />-->

    <CheckBoxPreference
        android:title="@string/preference_sound_label"
        android:key="@string/preference_sound_key"
        android:summaryOff="@string/preference_enable_sound_false"
        android:summaryOn="@string/preference_enable_sound_true"
        android:defaultValue="@string/preference_enable_sound_default" />

</PreferenceScreen>
